manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlight-plugins-docs-components
  namespace: starlight-plugins-docs-components
  labels:
    app: starlight-plugins-docs-components
spec:
  replicas: 3
  selector:
    matchLabels:
      app: starlight-plugins-docs-components
  template:
    metadata:
      labels:
        app: starlight-plugins-docs-components
    spec:
      containers:
        - name: starlight-plugins-docs-components
          image: "trueberryless/starlight-plugins-docs-components"
          imagePullPolicy: Always
