manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: starlight-plugins-docs-components
    namespace: starlight-plugins-docs-components
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: starlight-plugins-docs-components
    ports:
        - name: http
          port: 80
