manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-plugins-docs-components
  namespace: starlight-plugins-docs-components
spec:
  rules:
    - host: starlight-plugins-docs-components.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-plugins-docs-components
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-plugins-docs-components.trueberryless.org
      secretName: starlight-plugins-docs-components
